fixed silly svg -> png error

--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -204,7 +204,7 @@
       <tr>
         <td text-align="right"><span style="whitespace: nowrap">
 	  <embed id="feynman" src="[% feynman_url %]" align="bottom" width="[% feynman_width %]" height="[% feynman_height %]" border="0" pluginspage="http://www.adobe.com/svg/viewer/install/"></embed>
-	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<a href="[% base %]/download_bpseq?mfeid=[% mfe_id %]">Download&nbsp;bpseq</a><br>&nbsp;&nbsp;&nbsp;<a href="[% base %]/download_svg?accession=[% accession %]&mfeid=[% mfe_id %]&species=[% species %]">Download&nbsp;svg</a><br>
+	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<a href="[% base %]/download_bpseq?mfeid=[% mfe_id %]">Download&nbsp;bpseq</a><br>&nbsp;&nbsp;&nbsp;<a href="[% base %]/download_png?accession=[% accession %]&mfeid=[% mfe_id %]&species=[% species %]">Download&nbsp;png</a><br>
 	  </font>
         </span>
         </td>
