--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -1,5 +1,6 @@
 <style> .fixedfont { font-size : 14px } </style>
-
+<input type="hidden" name="species" value="[% species %]">
+<input type="hidden" name="accession" value="[% accession %]">
     <table style="table-layout: fixed" width="100%" align="center" border="0" cellpadding="2" cellspacing="1" align="center">
     <colgroup>
      <col width="20%"><col width="80%">
@@ -30,7 +31,7 @@
 	</td>
 	<td>
 	<i>
-	  [% species %]
+	  [% long_species %]
 	</i>
 	</td>
 	<td rowspan="12" valign="top">
