--- a/html/secondfilterform.html
+++ b/html/secondfilterform.html
@@ -3,7 +3,7 @@
 [% startform %]
 [% hidden_species %]
 [% hidden_algorithm %]
-You are filtering for [% nicespecies %] sequences using [% algorithm %] with [% seqlength %]bp sequences.<br>
+You are filtering for [% longspecies %] sequences using [% algorithm %] with [% seqlength %]bp sequences.<br>
 
 Given these criteria, the prfdb contains [% num_sequences %] sequences, of which [% num_sequences_knotted %] have
 pseudoknots and [% num_sequences_noknot %] do not.<br>
