A little work with snps, perhaps soon we will add some microarray data and do some correlations between the three.

--- a/html/chosen_download.html
+++ b/html/chosen_download.html
@@ -11,4 +11,7 @@
 <br>
   Click the following to download the entire
   <a href="[% base %]/download_all_boot?species=[% the_species %]">Boot table</a>.
+<br>
+  Click the following to download the entire
+  <a href="[% base %]/download_all_snp?species=homo_sapiens">SNP table</a>.
 </p>
