fun with imagemaps for the codon and percentage extensions

--- a/html/cloud.html
+++ b/html/cloud.html
@@ -83,10 +83,10 @@ And percentage.
 Below is a chart of extended reading frames, x axis percentage ORF, y axis percentage extended.
 </p>
 <center>
- <img src="[% basedir %]/images/cloud/[% species %]/extension-percent.png">
+ <img src="[% basedir %]/images/cloud/[% species %]/extension-percent.png" usemap="#percent_extension">
 </center>
 Below is the same with the number of codons on the y axis.
 </p>
 <center>
-  <img src="[% basedir %]/images/cloud/[% species %]/extension-codons.png">
+  <img src="[% basedir %]/images/cloud/[% species %]/extension-codons.png" usemap="#codons_extension">
 </center>
