--- a/html/cloud.html
+++ b/html/cloud.html
@@ -43,50 +43,4 @@ dots are more significant than the mean in both respects.  Grey lines
 delineate standard deviations less than mean.  Darker dots represent
 coordinates wihch share more than 1 sequence window.
 </p>
-<p>
-Below is a bar graph showing how many putative PRF signals are made up
-of each slippery site.  PRF signals which start with 'AAA' are red, 'UUU' are
-green, 'GGG' are blue, and 'CCC' are black.
-</p>
-<center>
- [% IF pknots_only %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-pknot-bar.png">
- [% ELSE %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-bar.png">
- [% END %]
-</center>
-
-<p>
-Below is a bar graph showing how many of these have values less than the mean
-MFE and zscore.
-</p>
-<center>
- [% IF pknots_only %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-pknot-bar-sig.png">
- [% ELSE %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-bar-sig.png">
- [% END %]
-</center>
-
-<p>
-And percentage.
-</p>
-<center>
- [% IF pknots_only %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-pknot-bar-percentsig.png">
- [% ELSE %]
- <img src="[% basedir %]/images/cloud/[% species %]/cloud-bar-percentsig.png">
- [% END %]
-</center>
-
-<p>
-Below is a chart of extended reading frames, x axis percentage ORF, y axis percentage extended.
-</p>
-<center>
- <img src="[% basedir %]/images/cloud/[% species %]/extension-percent.png" usemap="#percent_extension">
-</center>
-Below is the same with the number of codons on the y axis.
-</p>
-<center>
-  <img src="[% basedir %]/images/cloud/[% species %]/extension-codons.png" usemap="#codons_extension">
-</center>
+<a href="[% base %]/graphs?species=[% species %]">Click here for some more graphs</a>
