--- a/filter.html
+++ b/filter.html
@@ -1,29 +1,17 @@
-<& header,document_title=>"My sample component",category=>$category &>
+<form method="post" action="filter.html" enctype="multipart/form-data">
 
-   Hello World<BR>
-   This is my <B><% $component_count %></B> Mason component.
+Filter on species:
+<& species_selector, select_name => "species" &>
 
-
-% if (!($name) && !($email)) {
-   Enter your info:<br><br>
-   <FORM action="index.html" method="GET">
-   Name: <INPUT type="text" size="10" name="name"><br>
-   Email: <INPUT type="text" size="10" name="email"><br>
-   <INPUT type="submit">
-% } else {
-   This is what you entered:<br> 
-   Name: <% $name %><br>
-   Email: <% $email %><br>
-   hitting submit is the same as calling  /index.html,name=>"First Name",email=>"Email Address" 
-% }
-
-<& footer &>
+</select>And algorithm:
+<select name="algorithm" >
+<option selected="selected" value="pknots">pknots</option>
+<option value="nupack">nupack</option>
+</select><br>
+<input type="submit" name="filter_second" value="Filter PRFdb" />    
+</form>   </tr>
 
 <%init>
-   my $component_count = "first";
 </%init>
 <%args>
-   $category=>undef
-   $name=>undef
-   $email=>undef
 </%args>
