--- a/help.html
+++ b/help.html
@@ -1,29 +1,131 @@
-<& header,document_title=>"My sample component",category=>$category &>
+<p>
 
-   Hello World<BR>
-   This is my <B><% $component_count %></B> Mason component.
+ <font size="+2">Topics</font>
+ <ul>
+ <li>
+  The PRFdb <a href="http://prfdb.umd.edu/index.cgi/help_pipeline">pipeline</a>.
+ </li>
 
+ <li>
+  The <a href="http://prfdb.umd.edu/index.cgi/help_main">main page</a>.
+ </li>
 
-% if (!($name) && !($email)) {
-   Enter your info:<br><br>
-   <FORM action="index.html" method="GET">
-   Name: <INPUT type="text" size="10" name="name"><br>
-   Email: <INPUT type="text" size="10" name="email"><br>
-   <INPUT type="submit">
-% } else {
-   This is what you entered:<br> 
-   Name: <% $name %><br>
-   Email: <% $email %><br>
-   hitting submit is the same as calling  /index.html,name=>"First Name",email=>"Email Address" 
-% }
+ <li>
+  <a href="http://prfdb.umd.edu/index.cgi/help_search">Search interface</a>.
+ </li>
 
-<& footer &>
+ <li>
+  Looking at a <a href="http://prfdb.umd.edu/index.cgi/help_genome">single gene</a>.
+ </li>
+  <ul>
+
+   <li>
+  <a href="http://prfdb.umd.edu/index.cgi/help_genome#example">An Example Gene</a>.
+   </li>
+  </ul>
+  <ul>
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_genename">Gene name</a>
+   </li>
+
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_comments#help_comments">Comments</a>
+   </li>
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_linkout">Links out</a>
+   </li>
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_position">Position</a>
+
+   </li>
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_slipsite">Slippery Site</a>
+   </li>
+   <li>
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_folds">Number of folds</a>
+   </li>
+   <li>
+
+    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_codons">Highlighted Codons</a>
+   </li>
+  </ul>
+
+ <li>
+  Looking at a <a href="http://prfdb.umd.edu/index.cgi/help_detail">single PRF signal</a>.
+  <ul>
+    <li>
+
+   <a href="http://prfdb.umd.edu/index.cgi/help_detail#example">Example PRF Signal</a>.
+    </li>
+   </ul>
+   <ul>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_accession">Accession</a>
+    </li>
+    <li>
+
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_position">Position</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_algorithm">Algorithm</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_barcode">Barcode</a>
+
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_seqlength">Sequence Length</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_slipsite">Slippery Site</a>
+    </li>
+    <li>
+
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_bp">Base Pairs</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_mfe">Minimum Free Energy</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_z">Z score</a>
+
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_rand_mfe">Randomized mean MFE</a>
+    </li>
+    <li>
+     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_ppcc">Probability Plot Correlation Coefficient</a>
+    </li>
+   </ul>
+
+  </li>
+ 
+ <li>
+  <a href="http://prfdb.umd.edu/index.cgi/help_import">Importing Sequences</a>.
+ </li>
+
+ <li>
+  <a href="http://prfdb.umd.edu/index.cgi/help_filter">Filtering the PRFdb</a>.
+ </li>
+
+ <li>
+
+  <a href="http://prfdb.umd.edu/index.cgi/help_download">Downloading information</a>.
+ </li>
+
+ <li>
+  The <a href="http://prfdb.umd.edu/index.cgi/help_cloud">cloud</a>.
+ </li>
+
+ <li>
+  Using <a href="http://prfdb.umd.edu/index.cgi/help_blast">BLAST</a> in the PRFdb.
+ </li>
+
+ <li>
+  The <a href="http://prfdb.umd.edu/index.cgi/help_landscape">landscape</a>.
+ </li></form>   </tr>
 
 <%init>
-   my $component_count = "first";
 </%init>
 <%args>
-   $category=>undef
-   $name=>undef
-   $email=>undef
 </%args>
