--- a/search.html
+++ b/search.html
@@ -3,16 +3,7 @@
 <center>
   To begin browsing the PRFdb, please enter your search terms below.<br>
   <input type="text" name="query"  size="20"> 
-  <select name="search_species_limit">
-% my $index_species = $config->{index_species};
-% foreach my $spec (@{$index_species}) {
-% my $long_name = $spec;
-% $long_name =~ s/_/ /g;
-% $long_name = ucfirst($long_name);
-  <option value="<% $spec %>"><% $long_name %></option>
-% }
-  <option selected="selected" value="all">all</option>
-  </select>
+  <& species_selector, select_name => "search_species_limit" &>
   <input type="submit" name="search submit" value="Search"></form>
 </center>
 
@@ -21,14 +12,12 @@ It is available here: <a href="http://mgc.nci.nih.gov">http://mgc.nci.nih.gov</a
 <hr>
 
 Search the PRFdb for an arbitrary sequence using BLAST.<br>
-<form method="post" action="http://prfdb.umd.edu/index.cgi/search_blast" enctype="application/x-www-form-urlencoded">
+<form method="post" action="search_blast.html" enctype="application/x-www-form-urlencoded">
 <textarea name='blastsearch' rows=12 cols=100 wrap='physical'></textarea>
 <br>
 <input type="submit" name="blastsearch" value="Perform Blast Search"></form></tr>
 
 <%init>
 </%init>
-
-
 <%args>
 </%args>
