split refresh out

--- a/fold.html
+++ b/fold.html
@@ -71,37 +71,7 @@ forkfunc(\&tmp_fold, @child_args);
 </%perl>
 
 <p>This should redirect you to the output page for your folding.</p>
-<script language="JavaScript">
-var sURL = "<% "folds/$short_filename.html" %>";
-function doLoad()
-{
-    setTimeout( "refresh()", 1*1000 );
-}
-
-function refresh()
-{
-    //  This version of the refresh function will cause a new
-    //  entry in the visitor's history.  It is provided for
-    //  those browsers that only support JavaScript 1.0.
-    //
-    window.location.href = sURL;
-}
-//-->
-</script>
-
-<script language="JavaScript1.1">
-<!--
-function refresh()
-{
-    //  This version does NOT cause an entry in the browser's
-    //  page view history.  Most browsers will always retrieve
-    //  the document from the web-server whether it is already
-    //  in the browsers page-cache or not.
-    //  
-    window.location.replace( sURL );
-}
-//-->
-</script>
+<& refresh.js, refresh_url => "folds/$short_filename.html", seconds => 5 &>
 
 
 % }
